fix(YSP-487): allow padding-bottom to be reasonable
The previous commits had the padding for height way out of bounds,
causing the page to look strange.  This tightens it up a bit to allow it
to display similar to other components.

--- a/components/02-molecules/embed/_yds-embed.scss
+++ b/components/02-molecules/embed/_yds-embed.scss
@@ -23,10 +23,15 @@ $heights: (
   }
 }
 
+// Video embeds were being cut off by regular vh heights,
+// so we're using a percentage-based padding-bottom hack instead.
 .embed__inner:has(iframe[data-embed-type='video']) {
   position: relative;
+  width: 100%;
+  max-width: 100%;
   padding-bottom: 56.25%; // 16:9 aspect ratio
-  overflow: hidden;
+  height: 0;
+  overflow: visible;
 
   & iframe {
     position: absolute;
